# Baxters_Ai_Hot_Rod_Tuner

./: .gitignore  DESIGN.md  DEV_NOTES_APP_LINKING.txt  HRT_installer.bat  Hot Rod Tuner.spec  Hot_Rod_Tuner_Standalone_Manual.md  README.md  README_Documentation.md  ROADMAP.md  TODO.md  generate_pdfs.py  pyproject.toml  requirements.txt  run.bat  run_server.py
HRT instruction blocks/: module a block 1.txt  module a block 2.txt  serial_directory.md
devs/: DEV_NOTES_APP_LINKING.txt  DEV_NOTES_DEFENDER_FALSE_POSITIVE.txt  DEV_NOTES_DELL_FAN_CONTROL.txt
examples/: telemetry_sample.json
saddle/: README.md  config.example.json  missing_parts.md
src/hotrod_tuner/: __init__.py  app.py  fan_manager.py  metrics.py  policies.py  scheduler.py  sensors.py  sound.py  splash.py  telemetry_pipe.py
static/: index.html
tests/: test_policy.py
